# TerraFix

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  EXPERIMENT_ANALYSIS.md  HW9-REPORT.md  IMPLEMENTATION_SUMMARY.md  LOAD_TESTING_GUIDE.md  PLAN.md  README.md  REFLECTION.md  docker-compose.localstack.yml  env.localstack.example  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  template.yaml  terraform-pr-bot-spec.md
.github/workflows/: ci.yml  sam-cloud-local.yml
backend/: requirements.txt
backend/src/: claude_client.py  handler.py  remediation.py
docs/: DEMO_SCRIPT.md  TROUBLESHOOTING.md
events/: vanta_test_failure.json
experiment_results/: charts_report.html  experiment_summary.html  experiment_summary.json
experiment_results/resilience/: resilience_burst_report.html  resilience_burst_stats.csv  resilience_burst_stats_history.csv  resilience_cascade_report.html  resilience_cascade_stats.csv  resilience_failures_report.html  resilience_failures_stats.csv  resilience_failures_stats_history.csv  resilience_steady_report.html  resilience_steady_stats.csv  resilience_steady_stats_history.csv
experiment_results/scalability/: scalability_large_report.html  scalability_large_stats.csv  scalability_large_stats_history.csv  scalability_medium_report.html  scalability_medium_stats.csv  scalability_medium_stats_history.csv  scalability_mixed_report.html  scalability_mixed_stats.csv  scalability_mixed_stats_history.csv  scalability_small_report.html  scalability_small_stats.csv  scalability_small_stats_history.csv
experiment_results/throughput/: throughput_baseline_report.html  throughput_baseline_stats.csv  throughput_baseline_stats_history.csv  throughput_high_report.html  throughput_high_stats.csv  throughput_high_stats_history.csv  throughput_max_report.html  throughput_max_stats.csv  throughput_max_stats_history.csv  throughput_medium_report.html  throughput_medium_stats.csv  throughput_medium_stats_history.csv
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/events/: route.ts
frontend/app/api/trigger/: route.ts
frontend/components/: EventTable.tsx  MetricsCard.tsx  TriggerButton.tsx
sam/events/: sample_message.json
scripts/: generate_charts.py  regenerate_html.py  run_load_tests.ps1  run_load_tests.sh
src/terrafix/: __init__.py  __main__.py  api_server.py  cli.py  config.py  errors.py  github_pr_creator.py  health_check.py  logging_config.py  metrics.py  orchestrator.py  rate_limiter.py  redis_state_store.py  remediation_generator.py  resource_mappings.py  secure_git.py  service.py  state_store.py  terraform_analyzer.py  terraform_validator.py  vanta_client.py
src/terrafix/experiments/: __init__.py  __main__.py  charts.py  cli.py  generator.py  injector.py  locustfile.py  profiles.py  reporter.py  run_experiments.py  runner.py
terraform/: README.md  cloudwatch.tf  dynamodb.tf  ecr.tf  ecs.tf  elasticache.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  networking.tf  outputs.tf  s3.tf  secrets.tf  variables.tf
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/fixtures/cassettes/: .gitkeep
tests/fixtures/terraform/: .gitkeep
tests/fixtures/terraform/large/: iam_roles.tf  main.tf  rds.tf  s3_buckets.tf  security_groups.tf
tests/fixtures/terraform/medium/: iam.tf  main.tf  s3.tf  security_groups.tf
tests/fixtures/terraform/small/: main.tf
tests/unit/: __init__.py  test_config.py  test_github_pr_creator.py  test_orchestrator.py  test_redis_state_store.py  test_remediation_generator.py  test_terraform_analyzer.py  test_vanta_client.py
vibe_agent/: __init__.py  app.py
